Add bin directory where the test cases will be build and modified Makefile to build test when using 'make' command

--- a/Data Structures/String/Makefile
+++ b/Data Structures/String/Makefile
@@ -30,7 +30,7 @@ DEP = $(OBJ:.o=.d)
 TESTOBJ = $(TESTSRC:.cpp=.o)
 TESTDEP = $(TESTOBJ:.o=.d)
 
-all : $(TARGET)
+all : test # $(TARGET)
 
 $(TARGET) : $(OBJ)
 	$(CXX) $(CXXFLAGS) $^ -o $@
